# Payload-2024-2025

./: .gitignore  .pre-commit-config.yaml  Encoding&Transmission.py  README.md  SensorTesting  constants.py  direwolf.conf  direwolf.conf.template  main.py  pyproject.toml  requirements.txt  test_data.csv
esp32/: platformio.ini
esp32/include/: config.h  debug.h  led.h  sensors.h
esp32/src/: data_serializer.ino  debug.cpp  led.cpp  main.cpp  sensors.cpp
esp32/src/test_scripts/: test_bno08x.cpp  test_gps.cpp
launch_data/: genesis_launch_1.csv  genesis_launch_2.csv  genesis_launch_2_payload.csv  legacy_launch_1_payload.csv  legacy_launch_2_payload.csv
microcontrollers/: datacollection.ino
payload/: constants.py  main.py  payload.py  radio_interface.py  servoutils.py  state.py  utils.py
payload/arduino_code/: data_serializer.ino  datacollection.ino
payload/arduino_code/data_serializer/: data_serializer.ino
payload/data_collection_unit/: Cargo.toml
payload/data_handling/: data_processor.py  imu_data_packet.py  logged_data_packet.py  logger.py
payload/data_handling/packets/: context_data_packet.py  imu_data_packet.py  logged_data_packet.py  logger_data_packet.py  processed_data_packet.py  processor_data_packet.py  transmitter_data_packet.py
payload/datacollection/: data_serializer.ino  datacollection.ino
payload/hardware/: base_imu.py  camera.py  imu.py  radio_interface.py  receiver.py  sa_transceiver.py  transmitter.py  xbee_interface.py
payload/interfaces/: base_imu.py  base_receiver.py  base_transmitter.py
payload/mock/: display.py  mock_camera.py  mock_imu.py  mock_logger.py  mock_receiver.py  mock_transmitter.py
payload/transmission/: xbee_interface.py
scripts/: Encoding&transmittingTest.py  EncodingTransmittingTest.py  NewTransmittingScript.py  UARTLoopback.py  XBeeCMD.py  XBeeCheck.py  XBeeReceive.py  gpio_toggle.py  run_altimeter.py  run_imu.py  run_mock_arduino.py  run_pressure_sensor.py  run_sa585.py  run_xbee.py  serial_read_rollingbuffer.py  stopdirewolf.py  test.py  test_data.csv
spaceducks/: flight_states.py  payload.py  radio_interface.py  sensors.py  state.py
spaceducks/shared/: state.py  utils.py  xbee_interface.py
test/: Encoding&transmittingTest.py  UARTLoopback.py  XBeeCMD.py  XBeeReceive.py  gpstest.py  i2ctesting.py  stopdirewolf.py
tests/: run_imu.py  test_data_processor.py
