[package]
edition = "2021"
name = "data_collection_unit"
version = "0.1.0"

[[bin]]
name = "data_collection_unit"
path = "./src/bin/main.rs"

[dependencies]
esp-backtrace = { version = "0.15.1", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "defmt",
] }
critical-section = "1.2.0"
defmt = "0.3.10"
dps310 = { git = "https://github.com/chemicstry/dps310-rs.git", rev = "ecfcf5c31cda94f72e06af8838ba8e529f825cbe" }
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
micromath = "2.1.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
ublox = { version = "0.4.5", default-features = false }
bno080 = { git = "https://github.com/barafael/bno080", rev = "cd3a658" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
